--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,7 @@ dependencies {
     //glide
     implementation("com.github.bumptech.glide:glide:4.16.0")
     annotationProcessor("com.github.bumptech.glide:compiler:4.13.0")
+
+    // splashscreen
+    implementation 'androidx.core:core-splashscreen:1.0.0-alpha01'
 }
