--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,7 @@ dependencies {
     // lottie
     implementation "com.airbnb.android:lottie:6.1.0"
 
+    // skeletonlayout
+    implementation 'com.faltenreich:skeletonlayout:5.0.0'
+
 }
