feat : 상품 등록 페이지 UI  #53

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,4 +88,11 @@ dependencies {
 
     // lifecycle-viewmodel
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2")
+
+    // flexbox
+    implementation 'com.google.android.flexbox:flexbox:3.0.0'
+
+
+
+
 }
