--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,11 @@ dependencies {
 
     //coroutines
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9")
+
+
+    //gson okhttp for
+    implementation 'com.squareup.okhttp3:okhttp:3.14.9'
+    implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+
 }
