--- a/build.gradle
+++ b/build.gradle
@@ -13,4 +13,5 @@ plugins {
     id 'com.android.library' version '8.0.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
     id 'androidx.navigation.safeargs.kotlin' version '2.7.1' apply false
+    id 'com.google.gms.google-services' version "4.3.15" apply false
 }
