내 위치 근처 마커-> 프래그먼트 이동 후 재진입시 마커 사라지는 버그fix

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,7 +103,8 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:32.2.3')
     //firebase analytics
     implementation 'com.google.firebase:firebase-analytics-ktx'
-
+    //firestore
+    implementation "com.google.firebase:firebase-firestore-ktx:24.7.1"
 
 
 
