feat : 커뮤니티 firebase firestore에 저장된 데이터 읽기#76

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,7 +99,6 @@ dependencies {
     //firebase analytics
     implementation 'com.google.firebase:firebase-analytics-ktx'
 
-
-
-
+    //firebase firestore
+    implementation("com.google.firebase:firebase-firestore-ktx")
 }
