feat: #78 구글 로그인
- mypage에 로그아웃 버튼 추가
- userstartfragment에 구글 로그인 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,7 +104,11 @@ dependencies {
     //firebase analytics
     implementation 'com.google.firebase:firebase-analytics-ktx'
     //firestore
-    implementation "com.google.firebase:firebase-firestore-ktx:24.7.1"
+    implementation "com.google.firebase:firebase-firestore-ktx"
+    //authentication
+    implementation("com.google.firebase:firebase-auth-ktx")
+    // Google Play services library
+    implementation("com.google.android.gms:play-services-auth:20.7.0")
 
 
 
