feat: #78 카카오 로그인
- 사용자 정보 입력으로 넘어가도록
- 한번 로그인된 사용자라면 바로 산책화면으로 넘어감

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,9 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+                <!-- Redirect URI: "kakao${NATIVE_APP_KEY}://oauth" -->
+                <data android:host="oauth"
+                    android:scheme="kakaof4864fa3e86dfae5492b164a3053a125" />
 
             </intent-filter>
         </activity>
