--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,5 +116,8 @@ dependencies {
 
     // swiperefreshlayout
     implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.1.0")
+
+    // storage
+    implementation("com.google.firebase:firebase-storage-ktx")
     
 }
