feat : FirestoreRecyclerOptions 사용해서 firstore 데이터 변경시 실시간 RecyclerView 갱신

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -112,4 +112,8 @@ dependencies {
 
     //firebase firestore
     implementation("com.google.firebase:firebase-firestore-ktx")
+
+    // firebase firestore UI
+    implementation 'com.firebaseui:firebase-ui-firestore:8.0.0'
+
 }
