--- a/app/build.gradle
+++ b/app/build.gradle
@@ -130,5 +130,7 @@ dependencies {
 
     // storage
     implementation("com.google.firebase:firebase-storage-ktx")
-    
+
+    // PhotoView
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 }
