feat : ChatRoom, Message 구조 변경

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
         <activity
             android:name=".MainActivity"
             android:theme="@style/AppTheme.Splash"
-            android:exported="true">
+            android:exported="true"
+            android:configChanges="screenSize|screenLayout">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
