feat: #119 마커 주소 정보로 구글맵 place 이미지 받아오기
- model에 있던 place이름 maps의 place 클래스랑 중복돼서 placeData로 변경했습니다. 이것때문에 변경된
파일이 많네요
- 돌아가는거 보니까 네트워크로부터 검색해서 이미지 받아오는데 시간 얼마 안걸리네요. 이대로 하고
firestore, storage 저장 안해도 될 것 같습니다.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
     id 'com.google.gms.google-services'
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 
 //추가
@@ -137,5 +138,8 @@ dependencies {
 
     // PhotoView
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+
+    //places sdk
+    implementation 'com.google.android.libraries.places:places:3.1.0'
 
 }
