--- a/build.gradle
+++ b/build.gradle
@@ -14,4 +14,5 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
     id 'androidx.navigation.safeargs.kotlin' version '2.7.1' apply false
     id 'com.google.gms.google-services' version "4.3.15" apply false
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin' version '2.0.1' apply false
 }
