feat : 키보드 활성화되면 메시지 목록 위로 올리기

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
             android:name=".MainActivity"
             android:exported="true"
             android:theme="@style/AppTheme.Splash"
-            android:configChanges="screenSize|screenLayout">
+            android:configChanges="screenSize|screenLayout"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
