--- a/app/build.gradle
+++ b/app/build.gradle
@@ -142,4 +142,8 @@ dependencies {
     //places sdk
     implementation 'com.google.android.libraries.places:places:3.1.0'
 
+    // viewPager2 Indicator
+    // https://github.com/tommybuonomo/dotsindicator
+    implementation("com.tbuonomo:dotsindicator:5.0")
+
 }
