feat: 커뮤니티 ui다듬기
**게시글 상세**
- 댓글 사용자 이미지 로직 수정
- 레이아웃 다듬기(간격 등)
- 카테고리 상단에 보여주기

**게시글
리스트**
- 카테고리 위치, 디자인 변경
- 게시글 항목(row_community.xml) 레이아웃 다듬기(간격 등)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -136,6 +136,9 @@ dependencies {
     // storage
     implementation("com.google.firebase:firebase-storage-ktx")
 
+    // FirebaseUI Storage only
+    implementation 'com.firebaseui:firebase-ui-storage:7.2.0'
+
     // PhotoView
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 
